# nvMolKit

./: CMakeLists.txt  README.md  butina_results_h200_xeon4314_v03_final.csv  pyproject.toml  results_v3.csv  results_v4.csv  speedup_summary_v3.csv  speedup_summary_v4.csv
.github/workflows/: conda-build.yml
agent-skills/nvmolkit-usage/: SKILL.md
benchmarks/: butina_clustering_bench.py  butina_clustering_profile.py  plot_butina_clustering_h200.py  plot_nvmol_v3_v4.py  plot_speedup.py  plot_speedup_from_results.py  prepare_mols.py  tfd_bench.py  tfd_profile.py
docs/: agent_skill.rst  index.rst
docs/api/: nvmolkit.rst
nvmolkit/: CMakeLists.txt  _TFD.pyi  __init__.py  _mmffOptimization.pyi  _uffOptimization.pyi  clustering.py  conformerRmsd.py  mmffOptimization.cpp  tfd.cpp  tfd.py  uffOptimization.cpp
nvmolkit/tests/: test_conformer_rmsd.py  test_fingerprints.py  test_import_order.py  test_tfd.py
rdkit_extensions/: mmff_flattened_builder.cpp
src/: CMakeLists.txt  butina.cu  conformer_rmsd.cu  morgan_fingerprint_gpu.cpp  plot_tanimoto.py  similarity_kernels.cu  symmetric_eigensolver.cu  test_plot.ipynb  test_torch_ts.py  tfd.cpp  tfd.h  tfd_common.cpp  tfd_common.h  tfd_cpu.cpp  tfd_cpu.h  tfd_detail.h  tfd_gpu.cpp  tfd_gpu.h  tfd_kernels.cu  tfd_kernels.h  tfd_transfer.cu  tfd_types.h  triangle_smooth.cu
src/minimizer/: bfgs_minimize.cu  bfgs_minimize_permol_kernels.cu
src/tfd/: tfd_kernels.cu
src/utils/: cub_helpers.cuh
tests/: CMakeLists.txt  test_butina.cpp  test_morgan_fingerprint.cpp  test_tfd.cpp  test_tfd_cpu.cpp  test_tfd_gpu.cpp  test_tfd_kernels.cu
